# ibstrace

./: .gitignore  Cargo.toml  Makefile  README.md
ibst/: Cargo.toml
ibst-rs/: Cargo.toml  README.md
ibst-rs/src/: analysis.rs  codegen.rs  ibs.rs  ioctl.rs  lib.rs  msr.rs  util.rs
ibst/src/: analysis.rs  codegen.rs  ibs.rs  ioctl.rs  lib.rs  trace.rs
ibstrace/: Makefile  apic.c  fops.c  main.c  msr.h  nmi.c  precise_trampoline_asm.S  state.h  trampoline.c  trampoline_asm.S
include/: ibstrace.h
include/asm/: ibstrace_asm.h
kernel/: Makefile  apic.c  apic.h  fops.c  fops.h  ibstrace.h  main.c  msr.h  nmi.c  nmi.h  state.h  trampoline.c  trampoline_asm.S
scripts/: config-cpu  gdb-qemu.sh  reboot-qemu.sh  set-ht  start-qemu.sh
test/: Makefile  test.s
user/: Makefile  ibs-parse.py  ibstrace.c  test.s  trampoline_example.c
user/ibstrace-rs/: Cargo.toml
user/ibstrace-rs/src/: main.rs  msr.rs
xtask/: Cargo.toml
xtask/src/: main.rs
