[package]
name = "ibst"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.21.0"

[[bin]]
name = "ibst-measure"
path = "bin/ibst-measure.rs"

[[bin]]
name = "ibst-parse"
path = "bin/ibst-parse.rs"
