[package]
name = "ibst"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.21.0"
dynasmrt = "1.0.1"
yaxpeax-arch = "0.2.4"
yaxpeax-x86 = "1.0.3"
rand = "0.8.4"
rand_xorshift = "0.3.0"

[[bin]]
name = "ibst-msr"
path = "bin/ibst-msr.rs"

[[bin]]
name = "ibst-cpuid"
path = "bin/ibst-cpuid.rs"

[[bin]]
name = "ibst-single"
path = "bin/ibst-single.rs"
