[package]
name = "ibst"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["uio", "sched", "mman", "fs", "feature", "ioctl" ] }
dynasmrt = "1.0.1"
yaxpeax-arch = "0.2.4"
yaxpeax-x86 = "1.0.3"
iced-x86 = "1.15.0"
rand = "0.8.4"
rand_xorshift = "0.3.0"
num_enum = "0.7.3"
itertools = "0.14.0"
clap = { version = "4.5.34", features = ["derive"] }

